fix: clang-tidy: allow_failure: true

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,6 +103,7 @@ analysis:clang-tidy:
     expire_in: 1 week
     paths:
       - clang_tidy_fixes.yml
+  allow_failure: true
 
 version:
   stage: config 
