--- a/external/algorithms/CMakeLists.txt
+++ b/external/algorithms/CMakeLists.txt
@@ -68,5 +68,5 @@ add_subdirectory(calorimetry)
 #add_subdirectory(far_forward)
 #add_subdirectory(pid)
 #add_subdirectory(tracking)
-#add_subdirectory(truth)
+add_subdirectory(truth)
 #add_subdirectory(utility)
