--- a/external/algorithms/truth/CMakeLists.txt
+++ b/external/algorithms/truth/CMakeLists.txt
@@ -12,6 +12,8 @@ set(TARGETS ${TARGETS} ${LIBRARY} PARENT_SCOPE)
 # FIXME: adding one by one
 #file(GLOB SRC CONFIGURE_DEPENDS src/*.cpp)
 set(SRC
+    src/MC2SmearedParticle.cpp
+    src/ParticlesWithTruthPID.cpp
 )
 
 add_library(${LIBRARY} SHARED ${SRC})
