--- a/external/algorithms/CMakeLists.txt
+++ b/external/algorithms/CMakeLists.txt
@@ -67,6 +67,6 @@ add_subdirectory(calorimetry)
 #add_subdirectory(dis)
 #add_subdirectory(far_forward)
 #add_subdirectory(pid)
-#add_subdirectory(tracking)
+add_subdirectory(tracking)
 add_subdirectory(truth)
 #add_subdirectory(utility)
