--- a/external/algorithms/CMakeLists.txt
+++ b/external/algorithms/CMakeLists.txt
@@ -70,3 +70,35 @@ add_subdirectory(calorimetry)
 #add_subdirectory(tracking)
 add_subdirectory(truth)
 #add_subdirectory(utility)
+
+# -------------------------
+# install library config
+include(CMakePackageConfigHelpers)
+
+# Install and export targets
+install(EXPORT ${PROJECT_NAME}Targets
+  FILE ${PROJECT_NAME}Targets.cmake
+  NAMESPACE ${PROJECT_NAME}::
+  DESTINATION lib/${PROJECT_NAME}
+  )
+
+set(TARGETS_INSTALL_PATH lib/${PROJECT_NAME}/${PROJECT_NAME}Targets.cmake)
+
+configure_package_config_file(
+  cmake/${PROJECT_NAME}Config.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+  INSTALL_DESTINATION lib/${PROJECT_NAME}
+  PATH_VARS TARGETS_INSTALL_PATH
+  )
+
+write_basic_package_version_file(
+  ${PROJECT_NAME}ConfigVersion.cmake
+  VERSION ${VERSION}
+  COMPATIBILITY SameMajorVersion
+  )
+
+install(FILES
+  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
+  DESTINATION lib/${PROJECT_NAME}
+  )
