fix: submit benchmarks on the juggler container

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -194,8 +194,9 @@ benchmarks:reconstruction:
     - version
     - juggler:default
   variables:
-    JUGGLER_TAG: "$INTERNAL_TAG"
-    JUGGLER_REGISTRY: "$CI_REGISTRY_IMAGE"
+    BENCHMARKS_TAG: "$INTERNAL_TAG"
+    BENCHMARKS_CONTAINER: "juggler"
+    BENCHMARKS_REGISTRY: "$CI_REGISTRY_IMAGE"
   trigger:
     project: EIC/benchmarks/reconstruction_benchmarks
     strategy: depend
@@ -211,8 +212,9 @@ benchmarks:physics:
     - juggler:default
   variables:
     RECO: "juggler"
-    JUGGLER_TAG: "$INTERNAL_TAG"
-    JUGGLER_REGISTRY: "$CI_REGISTRY_IMAGE"
+    BENCHMARKS_TAG: "$INTERNAL_TAG"
+    BENCHMARKS_CONTAINER: "juggler"
+    BENCHMARKS_REGISTRY: "$CI_REGISTRY_IMAGE"
   trigger:
     project: EIC/benchmarks/physics_benchmarks
     strategy: depend
