--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,7 +135,7 @@ juggler:default:
                    --build-arg DETECTOR_VERSION=${JUGGLER_DETECTOR_VERSION}
                    --build-arg IP6_VERSION=${JUGGLER_IP6_VERSION}
                    --build-arg JUG_VERSION=juggler-${INTERNAL_TAG}-$(date +%Y-%m-%d_%H-%M-%S)-$(git rev-parse HEAD)
-                   --build-context detectors=eic_containers
+                   --build-context detectors=eic_container
                    eic_container/containers/jug
     - |
       if [ "$CI_COMMIT_BRANCH" == "main" ]; then
