fix: set JUGGLER_VERSION for eic_container trigger

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ eic_container:
   needs:
     - version
   variables:
-    VERSION: "${VERSION}"
+    JUGGLER_VERSION: "${VERSION}"
   trigger:
     project: containers/eic_container
     strategy: depend
