fix: set JUGGLER_VERSION for eic_container trigger

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,6 +80,7 @@ eic_container:
     - version
   variables:
     VERSION: "${VERSION}"
+    JUGGLER_VERSION: "${CI_COMMIT_REF_NAME}"
   trigger:
     project: containers/eic_container
     strategy: depend
