--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ add_definitions("-Dpodio_VERSION_MINOR=${podio_VERSION_MINOR}")
 add_definitions("-Dpodio_VERSION_PATCH=${podio_VERSION_PATCH}")
 
 find_package(ROOT COMPONENTS Core RIO Tree MathCore GenVector Geom REQUIRED)
-find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
+find_package(DD4hep COMPONENTS DDRec REQUIRED)
 
 find_package(Acts REQUIRED COMPONENTS Core PluginIdentification PluginTGeo PluginDD4hep PluginJson)
 set(Acts_VERSION_MIN "20.2.0")
