fix: place ActsGeoSvc into our namespace for disambiguation

--- a/JugTrack/CMakeLists.txt
+++ b/JugTrack/CMakeLists.txt
@@ -17,7 +17,7 @@ gaudi_add_module(JugTrackPlugins
   EDM4EIC::edm4eic
   DD4hep::DDRec
   k4FWCore::k4FWCore
-  ActsCore
+  ActsCore ActsPluginDD4hep ActsPluginJson
   ${ActsCore_PATH}/${CMAKE_SHARED_LIBRARY_PREFIX}ActsExamplesFramework${CMAKE_SHARED_LIBRARY_SUFFIX}
 )
 
