fix: algorithms::algocore etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,9 +82,9 @@ if (USE_SYSTEM_ALGORITHMS)
   find_package(algorithms)
 else()
   add_subdirectory(external/algorithms)
-  add_library(algorithms::core ALIAS algocore)
-  add_library(algorithms::truth ALIAS algotruth)
-  add_library(algorithms::calorimetry ALIAS algocalorimetry)
+  add_library(algorithms::algocore ALIAS algocore)
+  add_library(algorithms::algotruth ALIAS algotruth)
+  add_library(algorithms::algocalorimetry ALIAS algocalorimetry)
 endif()
 
 find_package(Gaudi)
