--- a/JugBase/CMakeLists.txt
+++ b/JugBase/CMakeLists.txt
@@ -5,10 +5,7 @@
 # Package: JugBase
 ################################################################################
 
-file(GLOB JugBase_sources CONFIGURE_DEPENDS src/*.cpp)
-gaudi_add_library(JugBase
-  SOURCES
-  ${JugBase_sources}
+gaudi_add_header_only_library(JugBase
   LINK
   Gaudi::GaudiKernel Gaudi::GaudiAlgLib
   podio::podioRootIO
@@ -16,11 +13,6 @@ gaudi_add_library(JugBase
   DD4hep::DDRec
   ActsCore ActsPluginDD4hep
   k4FWCore::k4FWCore
-)
-
-target_include_directories(JugBase PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
 file(GLOB JugBasePlugins_sources CONFIGURE_DEPENDS src/components/*.cpp)
