--- a/JugAlgo/CMakeLists.txt
+++ b/JugAlgo/CMakeLists.txt
@@ -30,7 +30,25 @@ target_include_directories(JugAlgoPlugins PUBLIC
 
 target_compile_options(JugAlgoPlugins PRIVATE -Wno-suggest-override)
 
-install(TARGETS JugAlgo JugAlgoPlugins
+file(GLOB JugAlgoPreload_sources CONFIGURE_DEPENDS src/preload/*.cpp)
+gaudi_add_module(JugAlgoPreload
+  SOURCES
+  ${JugAlgoPreload_sources}
+  LINK
+  Gaudi::GaudiKernel Gaudi::GaudiAlgLib
+  JugBase
+  JugAlgo
+  algorithms::core
+)
+
+target_include_directories(JugAlgoPreload PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
+  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+
+target_compile_options(JugAlgoPreload PRIVATE -Wno-suggest-override)
+
+install(TARGETS JugAlgo JugAlgoPlugins JugAlgoPreload
   EXPORT JugAlgoTargets
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
