feat: use digitization algorithms from EICrecon

--- a/JugDigi/CMakeLists.txt
+++ b/JugDigi/CMakeLists.txt
@@ -14,10 +14,12 @@ gaudi_add_module(JugDigiPlugins
   JugBase
   JugAlgo
   EICrecon::algorithms_calorimetry_library
+  EICrecon::algorithms_digi_library
   ROOT::Core ROOT::RIO ROOT::Tree
   EDM4HEP::edm4hep
   EDM4EIC::edm4eic
   k4FWCore::k4FWCore
+  GENCONF_OPTIONS --load-library=JugAlgoPreload.so
 )
 
 target_include_directories(JugDigiPlugins PUBLIC
