fix: rm GaudiAlgLib in JugAlgo

--- a/JugAlgo/CMakeLists.txt
+++ b/JugAlgo/CMakeLists.txt
@@ -35,7 +35,7 @@ gaudi_add_module(JugAlgoPreload
   SOURCES
   ${JugAlgoPreload_sources}
   LINK
-  Gaudi::GaudiKernel Gaudi::GaudiAlgLib
+  Gaudi::GaudiKernel
   JugBase
   JugAlgo
   algorithms::core
